--- a/css/style.css
+++ b/css/style.css
@@ -16,17 +16,17 @@
     position: absolute;
     bottom: 0;
     width: 120px;
-    animation: pipe-animation 1500ms infinite linear;
+    animation: pipe-animation 1.5s infinite linear;
 }
 
 .super-flash{
     width:330px;
-    position: fixed;
+    position: absolute;
     bottom: 0;
 }
 
 .jump-mario {
-    animation: mario-animation 600ms ;
+    animation: mario-animation 500ms ;
 }
 
 .central-city{
@@ -59,16 +59,16 @@
         bottom:0;
     }
     40% {
-        bottom: 180px;
+        bottom: 230px;
     }
     50% {
-        bottom: 180px;
+        bottom: 230px;
     }
     60%{
-        bottom: 180px;
+        bottom: 230px;
     }
     70%{
-        bottom: 180px;
+        bottom: 230px;
     }
     100%{
         bottom: 0%
