--- a/css/style.css
+++ b/css/style.css
@@ -1,15 +1,21 @@
 *{
-    margin:0;
+    margin:0px 0px 0px 0px;
     padding: 0;
     box-sizing: border-box;
 }
 
+body {
+    margin-top:100px;
+}
+
 .game {
     width: 100%;
-    height: 100vh;
+    height:80vh;
     margin: 0 auto;
     position: relative;
     overflow: hidden;
+    border-top: 15px solid goldenrod;
+    border-bottom: 15px solid red;
 }
 
 .flash-reverso {
@@ -26,7 +32,7 @@
 }
 
 .jump-mario {
-    animation: mario-animation 500ms ;
+    animation: mario-animation 600ms ;
 }
 
 .central-city{
