--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2? family= VT323 & display=swap');
 *{
     margin:0px 0px 0px 0px;
     padding: 0;
@@ -8,6 +9,16 @@ body {
     margin-top:100px;
 }
 
+.score {
+    font-family: 'VT323', monospace;
+    color: white;
+    position: fixed;
+    width: 100%;
+    margin-left: 10px;
+    background-image: " ";
+    z-index: 10;
+}
+
 .game {
     width: 100%;
     height:80vh;
@@ -15,18 +26,18 @@ body {
     position: relative;
     overflow: hidden;
     border-top: 15px solid goldenrod;
-    border-bottom: 15px solid red;
+    border-bottom: 15px solid red;  
 }
 
 .flash-reverso {
     position: absolute;
     bottom: 0;
-    width: 120px;
+    width: 90px;
     animation: pipe-animation 1.5s infinite linear;
 }
 
 .super-flash{
-    width:330px;
+    width:250px;
     position: absolute;
     bottom: 0;
 }
@@ -39,7 +50,6 @@ body {
     position: absolute;
     width: 100vw;
     height: 100vh;
-    animation: clouds-animation 10s infinite;
 }
 
 @keyframes pipe-animation {
@@ -53,7 +63,7 @@ body {
 
 @keyframes clouds-animation {
     from{
-        right: -550px;
+        right: -750px;
     }
     to{
         right:  100%;
@@ -65,16 +75,16 @@ body {
         bottom:0;
     }
     40% {
-        bottom: 230px;
+        bottom: 180px;
     }
     50% {
-        bottom: 230px;
+        bottom: 200px;
     }
     60%{
-        bottom: 230px;
+        bottom: 200px;
     }
     70%{
-        bottom: 230px;
+        bottom: 180px;
     }
     100%{
         bottom: 0%
