--- a/css/style.css
+++ b/css/style.css
@@ -11,17 +11,20 @@ body {
 
 .score {
     font-family: 'VT323', monospace;
-    color: white;
+    display: flex;
     position: fixed;
-    width: 100%;
-    margin-left: 10px;
     background-image: " ";
-    z-index: 10;
+    text-align: center;
+    margin-left: 30px;
+    margin-top: 25px;
+    color: red;
+    width: 165px;   
+    font-size: 17px;
 }
 
 .game {
     width: 100%;
-    height:80vh;
+    height:85vh;
     margin: 0 auto;
     position: relative;
     overflow: hidden;
@@ -33,7 +36,7 @@ body {
     position: absolute;
     bottom: 0;
     width: 90px;
-    animation: pipe-animation 1.5s infinite linear;
+    animation: pipe-animation 2s infinite linear;
 }
 
 .super-flash{
@@ -43,7 +46,7 @@ body {
 }
 
 .jump-mario {
-    animation: mario-animation 600ms ;
+    animation: mario-animation 600ms ease-out;
 }
 
 .central-city{
@@ -51,6 +54,38 @@ body {
     width: 100vw;
     height: 100vh;
 }
+
+#button {
+    font-family: 'VT323', monospace;
+    position: absolute;
+    font-size: 1.4rem;
+    width: 100px;
+    height: 40px;
+    top: 240px;
+    left: 51%;
+    background-color: #FD0002;
+    color: #fff;
+    border: black 3px solid;
+    box-shadow: 3px 3px rgba(63, 168, 249, 0.7);
+    border-radius: 10px;
+}
+
+.over {
+    position: absolute;
+    top: 40%;
+    left: 45%;
+}
+
+.hidden {
+    display: none;
+}
+
+.final{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}    
 
 @keyframes pipe-animation {
     from {
